#15319 closed bug (fixed)
[Tracker] Columns too wide and cannot be resized in AttributesView
Reported by: | waddlesplash | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
As in title. The columns are very wide and waste a lot of whitespace here (they probably should be resized automatically), and I can't manage to resize them (BColumnListView definitely supports this, Debugger uses it.)
Change History (2)
comment:1 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
comment:2 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Fixed in hrev53438.