InfoWindow: allow some resizing of attribute columns

Fixes #15319